--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ag-charts-community": "^10.0.2",
     "ag-grid-angular": "^32.1.0",
     "ag-grid-community": "^32.1.0",
+    "canvasjs": "^1.8.3",
     "chart.js": "^4.4.4",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
