--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@angular/router": "^16.2.0",
     "@canvasjs/angular-charts": "^1.2.0",
     "@canvasjs/charts": "^3.10.7",
+    "@types/select2": "^4.0.63",
     "ag-charts-angular": "^9.3.1",
     "ag-charts-community": "^10.0.2",
     "ag-grid-angular": "^32.1.0",
     "ag-grid-community": "^32.1.0",
+    "boxicons": "^2.1.4",
     "canvasjs": "^1.8.3",
     "chart.js": "^4.4.4",
     "exceljs": "^4.4.0",
